fixed alignment of components to be centered horizontally instead of horizontally and vertically

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ grid-container {
 
 /*centers each component*/
 grid-item {
-  display: flex;           
-  align-items: center;     
+  display: flex;                
   justify-content: center;
 }
